      ForeignKey will also assume the "default" schema
      when locating remote table.  This allows the "schema"
      argument on MetaData to be applied to any 
      set of Table objects that otherwise don't have 
      a "schema".
    - a "has_schema" method has been implemented
      on dialect, but only works on Postgresql so far.
    Courtesy Manlio Perillo, [ticket:1679]

  - [bug] Fixed bug whereby TypeDecorator would
    return a stale value for _type_affinity, when
    using a TypeDecorator that "switches" types,
    like the CHAR/UUID type.

  - [bug] Fixed bug whereby "order_by='foreign_key'"
    option to Inspector.get_table_names 
    wasn't implementing the sort properly, replaced
    with the existing sort algorithm

  - [bug] the "name" of a column-level CHECK constraint,
    if present, is now rendered in the CREATE TABLE 
    statement using "CONSTRAINT <name> CHECK <expression>". 
    [ticket:2305]

- pyodbc
   - [bug] pyodbc-based dialects now parse the 
     pyodbc accurately as far as observed
     pyodbc strings, including such gems
     as "py3-3.0.1-beta4" [ticket:2318]

- postgresql
   - [bug] Postgresql dialect memoizes that an ENUM of a 
     particular name was processed
     during a create/drop sequence.  This allows
     a create/drop sequence to work without any
     calls to "checkfirst", and also means with
     "checkfirst" turned on it only needs to 
     check for the ENUM once.  [ticket:2311]

   - [feature] Added create_type constructor argument 
     to pg.ENUM.  When False, no CREATE/DROP or 
     checking for the type will be performed as part
     of a table create/drop event; only the 
     create()/drop)() methods called directly
     will do this.  Helps with Alembic "offline"
     scripts.

- mssql
  - [bug] repaired the with_hint() feature which
    wasn't implemented correctly on MSSQL - 
    usually used for the "WITH (NOLOCK)" hint
    (which you shouldn't be using anyway ! 